# opcard-rs

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  Makefile  README.md  REUSE.toml  USAGE.md  USER_GUIDE.md
ci/: Dockerfile  Makefile  entrypoint.sh  vsmartcard-0.9-1-x86_64.pkg.tar.zst  vsmartcard-0.9-1-x86_64.pkg.tar.zst.license
examples/: usbip.rs  virtual.rs  vpicc.rs
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: fuzz_target_1.rs
fuzz/src/: lib.rs  main.rs
src/: backend.rs  card.rs  command.rs  error.rs  lib.rs  state.rs  tlv.rs  types.rs  utils.rs  virt.rs  vpicc.rs
src/backend/: software.rs  trussed.rs  virtual_platform.rs
src/card/: reply.rs  state.rs
src/command/: data.rs  gen.rs  private_key_template.rs  pso.rs
tests/: brainpool-p256r1-import.rs  brainpool-p256r1.rs  brainpool-p384r1-import.rs  brainpool-p384r1.rs  brainpool-p512r1-import.rs  brainpool-p512r1.rs  card.rs  change-pin.rs  change_pin.rs  command-response.ron  command-response.rs  command_response.ron  command_response.rs  crypto-gpg-import.rs  crypto-gpg.rs  crypto-sequoia.rs  crypto.rs  cv25519-import.rs  cv25519.rs  dos.rs  gpg-status.rs  gpg_status.rs  p256-import.rs  p256.rs  p384-import.rs  p384.rs  p521-import.rs  p521.rs  pins-reset.rs  rsa2048-import.rs  rsa2048.rs  rsa3072-import.rs  rsa3072.rs  rsa4096-import.rs  rsa4096.rs  secp256k1-import.rs  secp256k1.rs  sequoia-cv25519.rs  sequoia-p256.rs  sequoia-p384.rs  (+6 more)
tests/card/: mod.rs
tests/gpg/: mod.rs
tests/state_test_data/1.0.0/: ALGOS-Ed255-X255-Ed255.cbor
tests/state_test_data/1.1.0/: default.cbor
tests/state_test_data/1.2.0/: ALGOS-Rsa4096-Rsa4096-Rsa4096.cbor
tests/state_test_data/1.4.1/: ALGOS-EcDsaP521-EcDhP521-EcDsaP521.cbor  ALGOS-Rsa3072-Rsa3072-Rsa3072.cbor
tests/state_test_data/1.5.0/: ALGOS-EcDsaP256-EcDhP256-EcDsaP256.cbor  ALGOS-EcDsaP384-EcDhP384-EcDsaP384.cbor  all_non_default_with_private.cbor
tests/state_test_data/1.5.1/: ALGOS-EcDsaSecp256k1-EcDhSecp256k1-EcDsaSecp256k1.cbor  all_non_default.cbor
tests/state_test_data/1.6.0/: ALGOS-EcDsaBrainpoolP256R1-EcDhBrainpoolP256R1-EcDsaBrainpoolP256R1.cbor  ALGOS-EcDsaBrainpoolP512R1-EcDhBrainpoolP512R1-EcDsaBrainpoolP512R1.cbor
tests/state_test_data/1.6.1/: ALGOS-EcDsaBrainpoolP384R1-EcDhBrainpoolP384R1-EcDsaBrainpoolP384R1.cbor
tests/virt/: mod.rs
tests/vpicc/: mod.rs
