# Copyright (C) 2022 Nitrokey GmbH
# SPDX-License-Identifier: CC0-1.0

[package]
name = "opcard"
version = "1.5.0"
authors = ["Nitrokey GmbH <info@nitrokey.com>"]
edition = "2021"
description = "OpenPGP smart card implementation"
repository = "https://github.com/nitrokey/opcard-rs"
license = "LGPL-3.0-only"

[workspace]
members = [
	"fuzz"
]

[[example]]
name = "vpicc"
required-features = ["vpicc"]

[[example]]
name = "usbip"
required-features = ["apdu-dispatch"]

[dependencies]
heapless = "0.7"
heapless-bytes = "0.3"
iso7816 = "0.1.3"
littlefs2-core = "0.1"
log = "0.4"
serde = { version = "1.0", default-features = false }
subtle = { version = "2.4.1", default-features = false }
trussed = "0.1.0"
trussed-chunked = "0.1.0"
trussed-rsa-alloc = { version = "0.2.0", optional = true }
trussed-wrap-key-to-file = "0.1.0"
serde_repr = "0.1"
hex-literal = "0.4.1"
trussed-auth = "0.3.0"
admin-app = { version = "0.1.0", optional = true }

# optional dependencies
apdu-app = { version = "0.1", optional = true }
delog = { version = "0.1.7", optional = true }
trussed-staging = { version = "0.3.0", features = ["chunked", "wrap-key-to-file"], optional = true }
vpicc = { version = "0.1.0", optional = true }
cfg-if = "1.0.0"
bitflags = "2.5.0"

[dev-dependencies]
apdu-dispatch = "0.3"
env_logger = "0.9"
openpgp-card = "0.3"
openpgp-card-sequoia = "0.1.2"
sequoia-openpgp = "1.17.0"
openpgp-card-pcsc = "0.3"
regex = "1.6.0"
stoppable_thread = "0.2.1"
test-log = "0.2.10"
trussed = { version = "0.1.0", features = ["virt", "p384", "p521"] }
trussed-rsa-alloc = { version = "0.2.0", features = ["virt"] }
rand = "0.8.5"
ron = "0.8"
serde_cbor = "0.11"
tempfile = "3.8.0"
hex = { version = "0.4", features = ["serde"] }

# usbip
trussed-usbip = { version = "0.0.1", default-features = false, features = ["ccid"] }

[features]
default = []
std = []
apdu-dispatch = ["dep:apdu-app"]
vpicc = ["std", "dep:vpicc", "virt"]
virt = ["std", "trussed/virt", "trussed-staging"]

rsa = ["trussed-rsa-alloc"]
rsa2048 = ["rsa"]
rsa2048-gen = ["rsa2048"]
rsa3072 = ["rsa2048"]
rsa3072-gen = ["rsa3072", "rsa2048-gen"]
rsa4096 = ["rsa3072"]
rsa4096-gen = ["rsa4096", "rsa3072-gen"]

dangerous-test-real-card = []

# used for delog
log-all = []
log-none = []
log-info = []
log-debug = []
log-warn = []
log-error = []

[patch.crates-io]
p256-cortex-m4 = { git = "https://github.com/Nitrokey/p256-cortex-m4", tag = "v0.1.0-alpha.6-nitrokey-1" }
trussed = { git = "https://github.com/trussed-dev/trussed.git", rev = "046478b7a4f6e2315acf9112d98308379c2e3eee" }
trussed-auth = { git = "https://github.com/trussed-dev/trussed-auth.git", rev = "c030b82ad3441f337af09afe3a69e8a6da5785ea"}
trussed-chunked = { git = "https://github.com/trussed-dev/trussed-staging.git", tag = "chunked-v0.1.0" }
trussed-manage = { git = "https://github.com/trussed-dev/trussed-staging.git", tag = "manage-v0.1.0" }
trussed-rsa-alloc = { git = "https://github.com/trussed-dev/trussed-rsa-backend.git", tag = "v0.2.0" }
trussed-staging = { git = "https://github.com/trussed-dev/trussed-staging.git", rev = "53eba84d2cd0bcacc3a7096d4b7a2490dcf6f069" }
trussed-wrap-key-to-file = { git = "https://github.com/trussed-dev/trussed-staging.git", tag = "wrap-key-to-file-v0.1.0" }
trussed-usbip = { git = "https://github.com/Nitrokey/pc-usbip-runner.git", tag = "v0.0.1-nitrokey.5" }
admin-app = { git = "https://github.com/Nitrokey/admin-app.git", tag = "v0.1.0-nitrokey.18" }
ctaphid-dispatch = { git = "https://github.com/trussed-dev/ctaphid-dispatch.git", rev = "57cb3317878a8593847595319aa03ef17c29ec5b" }

[package.metadata.docs.rs]
all-features = true

[profile.dev.package.rsa]
opt-level = 2

[profile.dev.package.num-bigint-dig]
opt-level = 2
